--- a/examples/synthetic_data.ipynb
+++ b/examples/synthetic_data.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class UpliftMLP(net.UplitNet):\n",
+    "class UpliftMLP(net.UpliftNet):\n",
     "    def __init__(self, hidden_sizes):\n",
     "        super().__init__()\n",
     "        self.dense = [\n",
